[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holms"
dynamic = ["version"]
description = "Text to Unicode code points breakdown"
readme = "README.md"
license = "LGPL-3.0"
requires-python = ">=3.10"
platforms = ["linux"]
keywords = ["unicode", "text", "breakdown", "console", "terminal", "analyzer"]
authors = [
    { name = "Aleksandr Shavykin", email = "0.delameter@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
dependencies = [
    "click==8.1.7",
    "es7s-commons~=1.3",
    "pytermor==2.106.6.dev0",
]

[project.scripts]
holms = "holms.__main__:main"

[project.urls]
"Homepage" = "https://github.com/es7s/holms"
"Bug Tracker" = "https://github.com/es7s/holms/issues"
"Changelog" = "https://github.com/es7s/holms/blob/master/CHANGES.rst"

# ---------------------------------------------------------

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = [
    "holms",
    "tests",
]
addopts = [
    "--strict-config",
    "--maxfail", "5",
    "--durations", "5",
]
xfail_strict = true

[tool.coverage.run]
source = ["holms"]
branch = true
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "*/_version.py",
]
relative_files = true
dynamic_context = "test_function"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __debug__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "raise LogicError",
    "if __name__ == .__main__.:",
    "def repr_attrs\\(.+",
]
ignore_errors = true

[tool.coverage.html]
directory = "coverage-report"
title = "holms coverage report"

# ---------------------------------------------------------

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.publish.index]
disable = true

[tool.hatch.build.targets.sdist]
include = [
    "/holms",
    "/tests",
]

[tool.hatch.version]
path = "holms/_version.py"

[tool.hatch.envs.default.scripts]
version = "python -m holms --version"

[tool.hatch.envs.test]
detached = true
extra-dependencies = [
    "coverage[toml]~=6.4",
    "coveralls~=3.3",
    "pytest~=7.1",
    "pytest-cov~=4.1",
    "typing-extensions~=4.6",
]

[tool.hatch.envs.test.scripts]
test = "pytest"

[tool.hatch.envs.build]
detached = false
extra-dependencies = [
    "build~=0.8",
    "twine~=4.0",
]

[tool.hatch.envs.dev]
detached = false
extra-dependencies = [
    "pydeps~=1.10",
]
